<resources>
    <string name="app_name">解密陌生人</string>
    <string name="action_settings">Settings</string>
    <string name="activity_index">主界面</string>
    <string name="activity_register">注册</string>
    <string name="activity_login">登录</string>
    <string name="activity_chat">聊天</string>
    <string name="activity_big_image">查看大图</string>
    <string name="activity_add_contact">添加朋友</string>
    <string name="activity_new_friends">新朋友</string>
    <string name="activity_game">游戏</string>
    <string name="activity_splash">欢迎</string>
    <string name="activity_first">引导</string>
    <string name="activity_info">个人信息</string>
    <string name="net_error">网络断开，不能连接到服务器</string>
    <string name="text_ack_msg">read</string>
    <string name="text_delivered_msg">delivered</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">send</string>
    <string name="attach_smile">emoticon</string>
    <string name="attach_picture">image</string>
    <string name="attach_take_pic">take a picture</string>
    <string name="attach_location">location</string>
    <string name="attach_file">file</string>
    <string name="attach_voice_call">voice call</string>
    <string name="attach_video_call">video call</string>
    <string name="user_card">business card</string>
    <string name="move_up_to_cancel">slide up cancel sending</string>
    <string name="release_to_cancel">release finger to cancel sending</string>
    <string name="send_fail">send failed</string>
    <string name="delete_message">delete message</string>
    <string name="delete_conversation_messages">delete conversation and messages</string>
    <string name="delete_conversation">delete conversation</string>
    <string name="copy_message">copy message</string>
    <string name="delete_voice">delete voice</string>
    <string name="delete_video">delete video</string>
    <string name="delete">delete</string>
    <string name="resend">resend</string>
    <string name="confirm_resend">confirm to resend？</string>
    <string name="connect_failuer_toast">please check the network or try again later</string>
    <string name="network_unavailable">the network connection is not available, please check the network</string>
    <string name="copy">copy</string>
    <string name="forward">forwarding</string>
    <string name="button_logout">logout</string>
    <string name="button_uploadlog">uplod the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">prompt</string>
    <string name="clear_records">clear chat?</string>
    <string name="clear_all_records">clear all chats？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">save</string>
    <string name="button_search">find</string>
    <string name="button_add">add</string>
    <string name="search_header">search</string>
    <string name="network_isnot_available">网络不可用，请检查网络连接</string>
    <string name="recoding_fail">the recording failure, please try again！</string>
    <string name="select_contacts">select the contact</string>
    <string name="confirm_forward_to">determine the forwarded to：%1$s ?</string>
    <string name="logout">log out</string>
    <string name="logout_hint">logout will never clear the chat history, this account can used on next time user login</string>
    <string name="exit_group_hint">the group messages will not be received after exiting the groups</string>
    <string name="dissolution_group_hint">the group will be dismissed after exiting</string>
    <string name="exit_group">exit</string>
    <string name="connect_conflict">the same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">设置</string>
    <string name="notify">new message notification</string>
    <string name="newnotify">receiving a new message</string>
    <string name="shake">shake</string>
    <string name="chatset">chat settings</string>
    <string name="yangshengqi">use speaker</string>
    <string name="book_black">black list</string>
    <string name="session">消息</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">refreshing contact list</string>
    <string name="Application_and_notify">新朋友</string>
    <string name="group_chat">group chat</string>
    <string name="add_friend">add friends</string>
    <string name="search">search</string>
    <string name="black_item">black list</string>
    <string name="diagnose">diagnose</string>
    <string name="Current_version">current version</string>
    <string name="Not_Set">not set</string>
    <string name="Upload_the_log">uploading the log</string>
    <string name="The_new_group_chat">the new group</string>
    <string name="group_name">group name</string>
    <string name="Group_chat_profile">group profile</string>
    <string name="Whether_the_public">is public</string>
    <string name="Open_group_members_invited">group can send invitation</string>
    <string name="Open_group_chat">public group</string>
    <string name="blacklist">black list</string>
    <string name="Empty_the_chat_record">clear chat history</string>
    <string name="Shielding_of_the_message">block message</string>
    <string name="The_dissolution_of_chatting">dismiss group</string>
    <string name="Select_the_contact">select the contact</string>
    <string name="Group_chat_information">the group description</string>
    <string name="Group_of_Lord">the group owner</string>
    <string name="Introduction">brief</string>
    <string name="To_join_the_chat">join the group</string>
    <string name="login">login</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="confirmpassword">confirm password</string>
    <string name="downwaiting">downloading the file, please try again later</string>
    <string name="mute">mute</string>
    <string name="Hands_free">hands free</string>
    <string name="hang_up">hang up</string>
    <string name="answer">answer</string>
    <string name="unable_to_connect">unable to connect to the server</string>
    <string name="newchat">the new chat</string>
    <string name="agree">agree</string>
    <string name="Group_chat">group chat:</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">downloading video, please try again later</string>
    <string name="Exit_the_group_chat">exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Add a friend?</string>
    <string name="send_successful">Send the request is successful, waiting for the other party</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location...</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">The other party has refused to</string>
    <string name="The_other_is_not_online">The other is not online</string>
    <string name="The_other_is_on_the_phone">The other is on the phone</string>
    <string name="The_other_party_did_not_answer">The other party did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Has been cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Whether to empty all chats</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="you_are_group">You are group of creators to remove from the group</string>
    <string name="the_current_group">The current group chat has been founder group disbanded</string>
    <string name="Cant_chat_with_yourself">"Can't_chat_with_yourself"</string>
    <string name="deleting">deleting...</string>
    <string name="Delete_failed">Delete failed:</string>
    <string name="Is_moved_into_blacklist">Is moved into blacklist...</string>
    <string name="Log_uploaded_successfully">Log uploaded successfully</string>
    <string name="Log_Upload_failed">Log uploaded failed</string>
    <string name="get_failed_please_check">Get failed, please check the network or try again later</string>
    <string name="people">people)</string>
    <string name="being_added">Being added...</string>
    <string name="is_quit_the_group_chat">Is quit the group chat...</string>
    <string name="chatting_is_dissolution">Chatting is dissolution...</string>
    <string name="are_empty_group_of_news">Are empty group of news...</string>
    <string name="is_modify_the_group_name">Is modify the group name...</string>
    <string name="Modify_the_group_name_successful">Modify the group name successful</string>
    <string name="change_the_group_name_failed_please">Change the group name failed, please check the network or try again later</string>
    <string name="Are_moving_to_blacklist">Are moving to blacklist</string>
    <string name="failed_to_move_into">Failed to move into the blacklist, please check the network or try again later</string>
    <string name="Exit_the_group_chat_failure">Exit the group chat failure:</string>
    <string name="Dissolve_group_chat_tofail">Dissolve group chat to fail:</string>
    <string name="Add_group_members_fail">Add group members fail:</string>
    <string name="Is_unblock">Is unblock...</string>
    <string name="remove_group_of">Remove group of shielding failure, please check the network or try again later</string>
    <string name="group_is_blocked">Group is blocked...</string>
    <string name="group_of_shielding">Group of shielding failure, please check the network or try again later</string>
</resources>