<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@drawable/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_up_height"
        android:background="@drawable/info_up_bg"
        android:padding="10dp" >

        <!-- 头像部分 -->

        <com.levelup.jiemimoshengren.widget.CircularImageView
            android:id="@+id/img_head"
            android:layout_width="@dimen/info_img_size"
            android:layout_height="@dimen/info_img_size"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/head_circle"
            android:src="@drawable/default_head" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_head" >

            <TextView
                android:id="@+id/tv_name"
                style="@style/UserInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="姓名" />

            <TextView
                android:id="@+id/tv_sex"
                style="@style/UserInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_name"
                android:padding="5dp"
                android:text="男" />

            <TextView
                android:id="@+id/tv_sign"
                style="@style/UserInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_name"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:maxWidth="200dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- 消息提示 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/info_down_bg"
        android:fadingEdge="none"
        android:scrollbars="none"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:gravity="center"
                    android:paddingLeft="10dip"
                    android:text="@string/notify"
                    android:textColor="@color/btn_gray_pressed" />
            </LinearLayout>

            <View style="@style/HLineStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        style="@style/UserInfoTextStyle"
                        android:text="@string/newnotify" />

                    <ImageView
                        android:id="@+id/iv_switch_open_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/open_icon"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View style="@style/HLineStyle" />

                <RelativeLayout
                    android:id="@+id/rl_switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        style="@style/UserInfoTextStyle"
                        android:text="@string/voice" />

                    <ImageView
                        android:id="@+id/iv_switch_open_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/open_icon"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View style="@style/HLineStyle" />

                <RelativeLayout
                    android:id="@+id/rl_switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        style="@style/UserInfoTextStyle"
                        android:text="@string/shake" />

                    <ImageView
                        android:id="@+id/iv_switch_open_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/open_icon"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View style="@style/HLineStyle" />

                <RelativeLayout
                    android:id="@+id/rl_switch_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        style="@style/UserInfoTextStyle"
                        android:text="@string/yangshengqi" />

                    <ImageView
                        android:id="@+id/iv_switch_open_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/open_icon"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_style_alert_dialog_special"
                android:text="@string/button_logout"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>